Spacing issue on mobile

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -88,7 +88,7 @@ body{
 
 #main{
     width: 100%;
-    margin-top: 8vh !important;
+    margin-top: 65px !important;
 }
 .no-style-link a{
     color: black;
